<resources>
    <string name="app_name">Dicoding Story</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="em_io_exception">Couldn\'t reach server. Please check your internet connection.</string>
    <string name="em_unknown">Unknown error</string>
    <string name="logging_in">Logging in…</string>
    <string name="registering">Registering…</string>
    <string name="background_image">Background image</string>
    <string name="story_photo">Story photo</string>
    <string name="add_story">Add Story</string>
    <string name="camera">Camera</string>
    <string name="preview_image">Preview image</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="description">Description</string>
    <string name="story_detail">Story Detail</string>
    <string name="em_being_uploaded">Your story is already being uploaded</string>
    <string name="upload_success">Your story is successfully uploaded!</string>
    <string name="choose_a_picture">Choose a Picture</string>
    <string name="unable_to_acquire_permission">Unable to acquire permission</string>
    <string name="logout">Logout</string>
    <string name="tn_et_register_email" translatable="false">et_register_email</string>
    <string name="tn_et_register_password" translatable="false">et_register_password</string>
    <string name="tn_btn_register" translatable="false">btn_register</string>
    <string name="register_title">Haven\'t got an account yet?</string>
    <string name="image_all_types" translatable="false">image/*</string>
    <string name="em_password_min_length">Password must be longer than 6 characters</string>
    <string name="em_invalid_email">Invalid email</string>
    <string name="preferences">Preferences</string>
    <string name="open_phone_language_settings">Open phone language settings</string>
    <string name="language_settings_description">This app supports English and Bahasa Indonesia. Open phone language settings to change the language.</string>
    <string name="language">Language</string>
    <string name="app_widget_description">Widget that shows stories stack from users</string>
    <string name="stories_stack">Stories Stack</string>
    <string name="em_no_data">No data</string>
    <string name="em_name_blank">Name can not be empty</string>
    <string name="em_email_blank">Email can not be empty</string>
    <string name="em_password_blank">Password can not be blank</string>
    <string name="em_description_blank">Description can not be empty</string>
    <string name="em_photo_null">Story photo can not be empty</string>
    <string name="em_stories_empty">There\'s no stories available</string>
    <string name="opening_camera">Opening camera…</string>
    <string name="tn_tv_detail_user_name" translatable="false">tv_detail_user_name</string>
    <string name="tn_iv_detail_photo" translatable="false">iv_detail_photo</string>
    <string name="tn_iv_story_detail_background" translatable="false">iv_story_detail_background</string>
    <string name="retry">Retry</string>
    <string name="stories_map">Stories Map</string>
    <string name="hybrid">Hybrid</string>
    <string name="terrain">Terrain</string>
    <string name="satellite">Satellite</string>
    <string name="normal">Normal</string>
    <string name="em_loading_map_style">Failed loading custom map style</string>
    <string name="em_current_location">Failed fetching current location</string>
    <string name="add_current_location">Add current location to this story</string>
    <string name="format_location" translatable="false">%1$f, %2$f</string>
</resources>