<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="@dimen/padding_16dp"
    tools:context=".features.register.presentation.RegisterActivity">

    <EditText
        android:id="@+id/et_register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="parent" />

    <com.romnan.dicodingstory.core.layers.presentation.customView.EmailEditText
        android:id="@+id/eet_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:transitionName="@string/tn_et_register_email"
        app:layout_constraintTop_toBottomOf="@id/et_register_name" />

    <com.romnan.dicodingstory.core.layers.presentation.customView.PasswordEditText
        android:id="@+id/pet_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:transitionName="@string/tn_et_register_password"
        app:layout_constraintTop_toBottomOf="@id/eet_register" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:transitionName="@string/tn_btn_register"
        app:layout_constraintTop_toBottomOf="@id/pet_register" />
</androidx.constraintlayout.widget.ConstraintLayout>