<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/margin_16dp"
    tools:context=".features.preferences.PreferencesActivity">

    <TextView
        android:id="@+id/tv_title_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/language"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_description_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language_settings_description"
        app:layout_constraintTop_toBottomOf="@id/tv_title_language" />

    <Button
        android:id="@+id/btn_open_phone_language_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:text="@string/open_phone_language_settings"
        app:layout_constraintTop_toBottomOf="@id/tv_description_language" />

</androidx.constraintlayout.widget.ConstraintLayout>