<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".features.addStory.presentation.AddStoryActivity">

    <ProgressBar
        android:id="@+id/pb_uploading"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:paddingTop="@dimen/padding_4dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:autofillHints="description"
        android:background="@color/white"
        android:gravity="top|start"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:lines="6"
        android:maxLines="6"
        android:padding="@dimen/padding_16dp"
        android:scrollbars="vertical"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:contentDescription="@string/background_image"
        android:src="@drawable/bg_rounded_corner"
        app:layout_constraintBottom_toBottomOf="@id/iv_preview_image"
        app:layout_constraintTop_toBottomOf="@id/et_description" />

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:text="@string/camera"
        app:layout_constraintLeft_toLeftOf="@id/iv_background"
        app:layout_constraintRight_toLeftOf="@id/btn_gallery"
        app:layout_constraintTop_toTopOf="@id/iv_background" />

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:text="@string/gallery"
        app:layout_constraintBottom_toBottomOf="@id/btn_camera"
        app:layout_constraintLeft_toRightOf="@id/btn_camera"
        app:layout_constraintRight_toRightOf="@id/iv_background"
        app:layout_constraintTop_toTopOf="@id/btn_camera" />

    <ImageView
        android:id="@+id/iv_preview_image"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:contentDescription="@string/preview_image"
        android:padding="@dimen/padding_16dp"
        android:src="@drawable/ic_baseline_image_24"
        app:layout_constraintLeft_toLeftOf="@id/iv_background"
        app:layout_constraintRight_toRightOf="@id/iv_background"
        app:layout_constraintTop_toBottomOf="@id/btn_camera" />

</androidx.constraintlayout.widget.ConstraintLayout>